Added Authentication & Roles
- Added Authentication & JWT
- Added Roles & Security config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=8084
 spring.jpa.hibernate.ddl-auto=update
+
+# JWT Configuration
+jwt.secret=c3ByaW5nLWJvb3QtaW52ZW50b3J5LW1hbmFnZW1lbnQtYXBwLXNlY3JldA==
+jwt.expiration=86400000
